// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollPaddingInlineEnd renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: 0;
  -moz-scroll-padding-inline-end: 0;
  -ms-scroll-padding-inline-end: 0;
  scroll-padding-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: 0;
  -moz-scroll-padding-inline-end: 0;
  -ms-scroll-padding-inline-end: 0;
  scroll-padding-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: 0;
  -moz-scroll-padding-inline-end: 0;
  -ms-scroll-padding-inline-end: 0;
  scroll-padding-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: 0;
  -moz-scroll-padding-inline-end: 0;
  -ms-scroll-padding-inline-end: 0;
  scroll-padding-inline-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: hasnot;
  -moz-scroll-padding-inline-end: hasnot;
  -ms-scroll-padding-inline-end: hasnot;
  scroll-padding-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: has;
  -moz-scroll-padding-inline-end: has;
  -ms-scroll-padding-inline-end: has;
  scroll-padding-inline-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: hasnot;
  -moz-scroll-padding-inline-end: hasnot;
  -ms-scroll-padding-inline-end: hasnot;
  scroll-padding-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: has;
  -moz-scroll-padding-inline-end: has;
  -ms-scroll-padding-inline-end: has;
  scroll-padding-inline-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: invalid.path.1;
  -moz-scroll-padding-inline-end: invalid.path.1;
  -ms-scroll-padding-inline-end: invalid.path.1;
  scroll-padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: invalid.path.1;
  -moz-scroll-padding-inline-end: invalid.path.1;
  -ms-scroll-padding-inline-end: invalid.path.1;
  scroll-padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: invalid.path.1;
  -moz-scroll-padding-inline-end: invalid.path.1;
  -ms-scroll-padding-inline-end: invalid.path.1;
  scroll-padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: invalid.path.1;
  -moz-scroll-padding-inline-end: invalid.path.1;
  -ms-scroll-padding-inline-end: invalid.path.1;
  scroll-padding-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: -54881px;
  -moz-scroll-padding-inline-end: -54881px;
  -ms-scroll-padding-inline-end: -54881px;
  scroll-padding-inline-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: -54881px;
  -moz-scroll-padding-inline-end: -54881px;
  -ms-scroll-padding-inline-end: -54881px;
  scroll-padding-inline-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: -42365px;
  -moz-scroll-padding-inline-end: -42365px;
  -ms-scroll-padding-inline-end: -42365px;
  scroll-padding-inline-end: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: -42365px;
  -moz-scroll-padding-inline-end: -42365px;
  -ms-scroll-padding-inline-end: -42365px;
  scroll-padding-inline-end: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: July;
  -moz-scroll-padding-inline-end: July;
  -ms-scroll-padding-inline-end: July;
  scroll-padding-inline-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: July;
  -moz-scroll-padding-inline-end: July;
  -ms-scroll-padding-inline-end: July;
  scroll-padding-inline-end: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: January;
  -moz-scroll-padding-inline-end: January;
  -ms-scroll-padding-inline-end: January;
  scroll-padding-inline-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: December;
    -moz-scroll-padding-inline-end: December;
    -ms-scroll-padding-inline-end: December;
    scroll-padding-inline-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: June;
    -moz-scroll-padding-inline-end: June;
    -ms-scroll-padding-inline-end: June;
    scroll-padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: January;
  -moz-scroll-padding-inline-end: January;
  -ms-scroll-padding-inline-end: January;
  scroll-padding-inline-end: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: December;
    -moz-scroll-padding-inline-end: December;
    -ms-scroll-padding-inline-end: December;
    scroll-padding-inline-end: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: June;
    -moz-scroll-padding-inline-end: June;
    -ms-scroll-padding-inline-end: June;
    scroll-padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: July;
    -moz-scroll-padding-inline-end: July;
    -ms-scroll-padding-inline-end: July;
    scroll-padding-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: July;
    -moz-scroll-padding-inline-end: July;
    -ms-scroll-padding-inline-end: July;
    scroll-padding-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: June;
    -moz-scroll-padding-inline-end: June;
    -ms-scroll-padding-inline-end: June;
    scroll-padding-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: June;
    -moz-scroll-padding-inline-end: June;
    -ms-scroll-padding-inline-end: June;
    scroll-padding-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: July;
  -moz-scroll-padding-inline-end: July;
  -ms-scroll-padding-inline-end: July;
  scroll-padding-inline-end: July;
}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: July;
  -moz-scroll-padding-inline-end: July;
  -ms-scroll-padding-inline-end: July;
  scroll-padding-inline-end: July;
}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: April;
  -moz-scroll-padding-inline-end: April;
  -ms-scroll-padding-inline-end: April;
  scroll-padding-inline-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: January;
    -moz-scroll-padding-inline-end: January;
    -ms-scroll-padding-inline-end: January;
    scroll-padding-inline-end: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: December;
    -moz-scroll-padding-inline-end: December;
    -ms-scroll-padding-inline-end: December;
    scroll-padding-inline-end: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: April;
  -moz-scroll-padding-inline-end: April;
  -ms-scroll-padding-inline-end: April;
  scroll-padding-inline-end: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: January;
    -moz-scroll-padding-inline-end: January;
    -ms-scroll-padding-inline-end: January;
    scroll-padding-inline-end: January;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: December;
    -moz-scroll-padding-inline-end: December;
    -ms-scroll-padding-inline-end: December;
    scroll-padding-inline-end: December;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-padding-inline-end: July;
    -moz-scroll-padding-inline-end: July;
    -ms-scroll-padding-inline-end: July;
    scroll-padding-inline-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-padding-inline-end: July;
    -moz-scroll-padding-inline-end: July;
    -ms-scroll-padding-inline-end: July;
    scroll-padding-inline-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: September;
    -moz-scroll-padding-inline-end: September;
    -ms-scroll-padding-inline-end: September;
    scroll-padding-inline-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: November;
    -moz-scroll-padding-inline-end: November;
    -ms-scroll-padding-inline-end: November;
    scroll-padding-inline-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: August;
    -moz-scroll-padding-inline-end: August;
    -ms-scroll-padding-inline-end: August;
    scroll-padding-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-end: January;
    -moz-scroll-padding-inline-end: January;
    -ms-scroll-padding-inline-end: January;
    scroll-padding-inline-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: December;
    -moz-scroll-padding-inline-end: December;
    -ms-scroll-padding-inline-end: December;
    scroll-padding-inline-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: June;
    -moz-scroll-padding-inline-end: June;
    -ms-scroll-padding-inline-end: June;
    scroll-padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-padding-inline-end: January;
    -moz-scroll-padding-inline-end: January;
    -ms-scroll-padding-inline-end: January;
    scroll-padding-inline-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: December;
    -moz-scroll-padding-inline-end: December;
    -ms-scroll-padding-inline-end: December;
    scroll-padding-inline-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-padding-inline-end: April;
    -moz-scroll-padding-inline-end: April;
    -ms-scroll-padding-inline-end: April;
    scroll-padding-inline-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-padding-inline-end: May;
    -moz-scroll-padding-inline-end: May;
    -ms-scroll-padding-inline-end: May;
    scroll-padding-inline-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-padding-inline-end: June;
    -moz-scroll-padding-inline-end: June;
    -ms-scroll-padding-inline-end: June;
    scroll-padding-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: 54881px;
  -moz-scroll-padding-inline-end: 54881px;
  -ms-scroll-padding-inline-end: 54881px;
  scroll-padding-inline-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: 54881px;
  -moz-scroll-padding-inline-end: 54881px;
  -ms-scroll-padding-inline-end: 54881px;
  scroll-padding-inline-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: 42365px;
  -moz-scroll-padding-inline-end: 42365px;
  -ms-scroll-padding-inline-end: 42365px;
  scroll-padding-inline-end: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: 42365px;
  -moz-scroll-padding-inline-end: 42365px;
  -ms-scroll-padding-inline-end: 42365px;
  scroll-padding-inline-end: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: July;
  -moz-scroll-padding-inline-end: July;
  -ms-scroll-padding-inline-end: July;
  scroll-padding-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: July;
  -moz-scroll-padding-inline-end: July;
  -ms-scroll-padding-inline-end: July;
  scroll-padding-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: June;
  -moz-scroll-padding-inline-end: June;
  -ms-scroll-padding-inline-end: June;
  scroll-padding-inline-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: June;
  -moz-scroll-padding-inline-end: June;
  -ms-scroll-padding-inline-end: June;
  scroll-padding-inline-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollPaddingInlineEnd renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`scrollPaddingInlineEnd renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-padding-inline-end: DarkSlateBlue;
  -moz-scroll-padding-inline-end: DarkSlateBlue;
  -ms-scroll-padding-inline-end: DarkSlateBlue;
  scroll-padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: DarkSlateBlue;
  -moz-scroll-padding-inline-end: DarkSlateBlue;
  -ms-scroll-padding-inline-end: DarkSlateBlue;
  scroll-padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: DarkSlateBlue;
  -moz-scroll-padding-inline-end: DarkSlateBlue;
  -ms-scroll-padding-inline-end: DarkSlateBlue;
  scroll-padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-padding-inline-end: DarkSlateBlue;
  -moz-scroll-padding-inline-end: DarkSlateBlue;
  -ms-scroll-padding-inline-end: DarkSlateBlue;
  scroll-padding-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
